# exp-runner

./: AGENTS.md  README.md  main.py  pyproject.toml
src/exp_runner/: __init__.py  runner.py
tests/: main.py  test_runner_simple.py
