[project]
name = "exp-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
